# maludb-oracle19c-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATABASE_STRUCTURE.md  LICENSE  Makefile  README.md  SVPOR_ERD.md  build-path.md  design-notes.md  embedding-handoff-analysis.md  embedding-handoff.md  end-to-end.md  executive-summary.md  maludb_core--0.12.0--0.13.0.sql  maludb_core--0.14.0--0.15.0.sql  maludb_core--0.18.0--0.19.0.sql  maludb_core--0.25.0--0.26.0.sql  maludb_core--0.31.0--0.32.0.sql  maludb_core--0.32.0--0.33.0.sql  maludb_core--0.33.0--0.34.0.sql  maludb_core--0.35.0--0.36.0.sql  maludb_core--0.37.0--0.38.0.sql  maludb_core--0.38.0--0.39.0.sql  maludb_core--0.39.0--0.40.0.sql  maludb_core--0.41.0--0.42.0.sql  maludb_core--0.43.0--0.44.0.sql  maludb_core--0.46.0--0.47.0.sql  maludb_core--0.47.0--0.48.0.sql  maludb_core--0.50.0--0.51.0.sql  maludb_core--0.55.0--0.56.0.sql  maludb_core--0.56.0--0.57.0.sql  maludb_core--0.58.0--0.59.0.sql  maludb_core--0.6.0--0.7.0.sql  maludb_core--0.61.0--0.62.0.sql  maludb_core--0.66.0--0.67.0.sql  maludb_core--0.68.0--0.69.0.sql  maludb_core--0.69.0--0.70.0.sql  maludb_core--0.7.0--0.8.0.sql  maludb_core--0.70.0--0.71.0.sql  (+6 more)
bench/: graph_walk.sql  retrieve.sql  run-baseline.sh  seed.sql  text_search.sql
cli/maludb/: README.md  pyproject.toml
cli/maludb/src/maludb_cli/: __init__.py  __main__.py  db.py  errors.py  output.py  s3.py
cli/maludb/src/maludb_cli/commands/: __init__.py  auth.py  backup.py  chatindex.py  cron.py  db_cmd.py  env.py  install.py  log_drain.py  metrics.py  model.py  pageindex.py  prompt.py  queue.py  realtime.py  replay.py  retrieve.py  secret.py  source.py  status.py  tool.py
cli/maludb/tests/: test_smoke.py
debian/: .gitignore  README.Debian  changelog  control  copyright  maludb-mc2dbd.install  maludb-mc2dbd.manpages  maludb-mc2dbd.postinst  maludb-mc2dbd.postrm  maludb.install  not-installed  postgresql-16-maludb-core.install  postgresql-16-maludb-core.postinst  postgresql-17-maludb-core.install  postgresql-17-maludb-core.postinst  postgresql-18-maludb-core.install  postgresql-18-maludb-core.postinst  rules
docs/: .memory-extraction-json-contract.md.swp  admin-guide.md  agent-skills.md  api-document-extraction-prompt.md  api-sync-0.94-0.95.md  bench-baseline.md  document-reindex.md  extraction-prompt-0.96.0.md  extraction-prompt-gpt-4o.md  field-test.md  getting-started.md  install.md  maludb-mc2dbd-contract.md  maludb-modeld-contract.md  mcp-broker-design.md  memory-extraction-json-contract.md  monitoring.md  note-search.md  packaging.md  post-alpha-roadmap.md  post-install-hardening.md  runtime.md  security-review.md  semantic-entity-embeddings.md  skill-reindex.md  user-manual.md
drivers/c/: .gitignore  CMakeLists.txt  README.md  maludb.pc.in
drivers/c/examples/: 01-ingest-to-replay.c
drivers/c/include/: maludb.h
drivers/c/src/: maludb.c
drivers/c/tests/: smoke.c  smoke_v02.c
drivers/python/: .gitignore  README.md  pyproject.toml
drivers/python/examples/: 01-ingest-to-replay.py
drivers/python/src/maludb/: __init__.py  client.py  exceptions.py  models.py
drivers/python/tests/: conftest.py  test_smoke.py
etc/: maludb-modeld.conf.example  maludb.conf.example
examples/: 01-ingest-to-replay.sql  02-skill-execution.sql  03-pool-promotion.sql  04-local-node-sync.sql
expected/: active_memory_pool.out  adapter_capability.out  advanced_mc2db_tools.out  agent_skill_distribution.out  api_helpers.out  atomic_writes.out  auth_token.out  authz_aware_retrieval.out  backup_manifest.out  bitemporal.out  bound_prompt.out  budget.out  c_hmac_jwt.out  c_secret_resolver.out  catalog.out  chat_index_append.out  chat_index_catalog.out  cron_schedule.out  document_note_svpor_hints.out  document_reindex.out  embed_pipeline.out  end_to_end.out  episode_replay.out  episode_subject.out  governance_audit.out  graph_traversal.out  idempotency.out  ingestion.out  lifecycle_salience.out  llm_chat_logs.out  llm_rls.out  load.out  local_ann.out  local_node_sync.out  log_drain.out  malu_vector_type.out  maut_scoring.out  mc2db_catalog.out  mc2db_invocation_rls.out  mdo_addressing.out  (+55 more)
maludb_skills/: README.md
mc2dbd/: Makefile  README.md  maludb_mc2dbd.8
runtime/: Makefile
scripts/: install-dev-env.sh  maludb-bench-vector  maludb-bootstrap  maludb-check-doc-consistency  maludb-ext-snapshot.sql  maludb-fieldtest  maludb-fieldtest-v3  maludb-fieldtest-v4  maludb-force-rls  maludb-gpu-check  maludb-model-runtime-check  maludb-tls-init  maludb-upgrade  maludb-validate  maludb_modeld  test-maludb-bootstrap-pgaudit-preload
services/maludb-logsd/: README.md  pyproject.toml
services/maludb-logsd/src/maludb_logsd/: __init__.py  __main__.py  db.py  sinks.py  worker.py
services/maludb-logsd/tests/: test_smoke.py
services/maludb-pageindexd/: README.md  pyproject.toml
services/maludb-pageindexd/src/maludb_pageindexd/: __init__.py  __main__.py  builder.py  db.py  model_gateway.py  worker.py
services/maludb-pageindexd/src/maludb_pageindexd/parsers/: __init__.py  markdown_parser.py  plain_text_parser.py  pypdf_parser.py
services/maludb-pageindexd/tests/: test_builder.py  test_markdown_parser.py  test_plain_text_parser.py  test_pypdf_parser.py
services/maludb-realtimed/: README.md  pyproject.toml
services/maludb-realtimed/src/maludb_realtimed/: __init__.py  __main__.py  db.py  server.py  ws.py
services/maludb-realtimed/tests/: test_smoke.py
services/maludb-restd/: README.md  pyproject.toml
services/maludb-restd/samples/: maludb-restd.env
services/maludb-restd/src/maludb_restd/: __init__.py  __main__.py  db.py  dispatcher.py  server.py
services/maludb-restd/tests/: test_smoke.py
services/mcp-broker/: README.md  pyproject.toml
services/mcp-broker/samples/: mcp-broker.json
services/mcp-broker/src/mcp_broker/: __init__.py  __main__.py  server.py  tools.py
services/mcp-broker/tests/: test_smoke.py
sql/: active_memory_pool.sql  adapter_capability.sql  advanced_mc2db_tools.sql  agent_skill_distribution.sql  api_helpers.sql  atomic_writes.sql  auth_token.sql  authz_aware_retrieval.sql  (+89 more)
(+218 files in other folders)
