[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maludb"
version = "0.1.0"
description = "Python driver for MaluDB — a memory DBMS on PostgreSQL"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PostgreSQL" }
authors = [
    { name = "Edward Honour", email = "edward.honour@gmail.com" }
]
keywords = ["postgresql", "memory", "llm", "rag", "knowledge", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: PostgreSQL License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/edwardhonour/maludb-core"
Documentation = "https://github.com/edwardhonour/maludb-core/tree/main/docs"
Issues = "https://github.com/edwardhonour/maludb-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/maludb"]
