[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maludb-mcp-broker"
version = "0.1.0"
description = "MaluDB external MCP broker — proxies non-database tools to MCP clients."
readme = "README.md"
license = { text = "PostgreSQL" }
requires-python = ">=3.10"
authors = [
    { name = "Edward Honour", email = "edward.honour@gmail.com" }
]
keywords = ["mcp", "maludb", "broker", "tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: PostgreSQL License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.scripts]
maludb-mcp-broker = "mcp_broker.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_broker"]
